[gd_scene load_steps=7 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Friends/GreyRat.png" type="Texture" id=2]
[ext_resource path="res://Friends/GreyRat.gd" type="Script" id=3]
[ext_resource path="res://Music and Sounds/Pause.wav" type="AudioStream" id=4]
[ext_resource path="res://World/heart.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 6.0

[node name="GreyRat" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -2, 3 )
scale = Vector2( 1.2, 1 )
texture = ExtResource( 1 )

[node name="HeartSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -12, -3 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 1 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_GreyRat_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GreyRat_mouse_exited"]
